--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@
                         <div class="login-part">
                            
                                 <h1>Войти в аккаунт</h1>
-                                <div class="change-platform">
+                                 <div class="change-platform">
                                     <div class="item active">
                                         <img src="./img/mail.png" alt="">
+                                        <img class="mob" src="./img/mail-mob.png" alt="">
                                     </div>
                                     <div class="item">
                                         <img src="./img//yandex.png" alt="">
+                                        <img class="mob" src="./img/uamdex-mob.png" alt="">
                                     </div>
                                     <div class="item other">
                                         <span>Другой</span>
